[package]
name = "demobins"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "2-6"
path = "src/2/6.rs"

[[bin]]
name = "2-5"
path = "src/2/5.rs"

[[bin]]
name = "2-4"
path = "src/2/4.rs"

[[bin]]
name = "2-3"
path = "src/2/3.rs"

[[bin]]
name = "2-2"
path = "src/2/2.rs"

[[bin]]
name = "2-1"
path = "src/2/1.rs"

[[bin]]
name = "1-11"
path = "src/1/11.rs"

[[bin]]
name = "1-10"
path = "src/1/10.rs"

[[bin]]
name = "1-9"
path = "src/1/9.rs"

[[bin]]
name = "1-8"
path = "src/1/8.rs"

[[bin]]
name = "1-7"
path = "src/1/7.rs"

[[bin]]
name = "1-6"
path = "src/1/6.rs"

[[bin]]
name = "1-5"
path = "src/1/5.rs"

[[bin]]
name = "1-4"
path = "src/1/4.rs"

[[bin]]
name = "1-3"
path = "src/1/3.rs"

[[bin]]
name = "1-2"
path = "src/1/2.rs"

[[bin]]
name = "1-1"
path = "src/1/1.rs"

[dependencies]
trpl = "0.3.0"
blog = { path = "../blog" }
